apps/vllm/manifest/service-vlm.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vllm-server
  name: vllm-server
  namespace: vllm
spec:
  ports:
    - name: 80-80
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: vllm-server
  type: ClusterIP
